version 0.38
	* Fix tickets #6 and #7
	* Add a preliminary week view
	* Use a SelectionManager instead of various workarounds
	* Various code cleanups
	* Asynchronous load for distant stores on startup (try #3)
	* Add a tests/ folder with what should become a test suite
	* Automatic refresh and refresh interval in the preferences
	  panel, enabled only for the backends that support it

version 0.37 (2008/11/02)
	* Fix buglets uncovered by libical 0.41
	* Fix summary view size on startup
	* Fix method used to compare dates. Should fix multiple bugs
	  with recurrent events
	* Better error handling on webdav resources
	* Fix week number calculation (ticket #3)

version 0.36 (2008/01/20)
	* Calendar UI changes : to reduce calendar size, use different
	  visual hints. Today has a yellow background (unchanged), the 
	  selected day cell is bezeled/pushed (was a bold font) and busy 
	  days use a bold font (instead of a tick mark). Always show six 
	  weeks with black text for the chosen month and white text for 
	  the previous and next ones. Use a defined font size so that it 
	  all fits whatever the user choose as a default size.
	* Day view : circle through appointments with TAB and edit the 
	  selected one with enter
	* Day view : no more appointments overlapping. The algorithm is
	  not 100% correct, we might want to change that in the future
	* Change license for future GNUstep GPLv3 release compatibility
	  Thanks to Yavor Doganov for pointing out the issue.
	* Use ETags to prevent overwriting distant modifications
	* Add a menu item to force agendas to reload their data
	* Bug fixes and various improvements
	* Experimental GroupDAV support : some things work but use with 
	  care. Feedback appreciated

version 0.35 (2007/12/31)
	* Fix (fingers crossed) timezone bugs and current day timer
	* New website at http://coyote.octets.fr/simpleagenda

version 0.34 (2007/12/13)
	* Fix loading and saving logic : when loading an iCalendar,