@@ -25,14 +25,6 @@
 - (int)weekday;
 - (int)weekOfYear;
 - (int)numberOfDaysInMonth;
-- (int)daysUntil:(Date *)date;
-- (int)daysSince:(Date *)date;
-- (int)weeksUntil:(Date *)date;
-- (int)weeksSince:(Date *)date;
-- (int)monthsUntil:(Date *)date;
-- (int)monthsSince:(Date *)date;
-- (int)yearsUntil:(Date *)date;
-- (int)yearSince:(Date *)date;
 - (void)setSecondOfMinute:(int)second;
 - (void)setMinute:(int)minute;
 - (void)setDay:(int)day;
