@@ -2,26 +2,16 @@
 
 #import "Date.h"
 #import "Element.h"
-
-enum intervalType
-{
-  RI_NONE = 0, 
-  RI_DAILY, 
-  RI_WEEKLY, 
-  RI_MONTHLY, 
-  RI_YEARLY
-};
+#import "RecurrenceRule.h"
 
 @interface Event : Element
 {
   NSString *_location;
   BOOL _allDay;
   Date *startDate;
-  Date *endDate;
   int duration;
-  enum intervalType interval;
-  int frequency;
   int scheduleLevel;
+  RecurrenceRule *rrule;
 }
 
 - (id)initWithStartDate:(Date *)start duration:(int)minutes title:(NSString *)aTitle;
@@ -32,18 +22,14 @@ enum intervalType
 - (NSString *)location;
 - (BOOL)allDay;
 - (int)duration;
-- (int)frequency;
 - (Date *)startDate;
-- (Date *)endDate;
-- (int)interval;
+- (RecurrenceRule *)rrule;
 
 - (void)setLocation:(NSString *)aLocation;
 - (void)setAllDay:(BOOL)allDay;
 - (void)setDuration:(int)duration;
-- (void)setFrequency:(int)frequency;
 - (void)setStartDate:(Date *)startDate;
-- (void)setEndDate:(Date *)endDate;
-- (void)setInterval:(int)interval;
+- (void)setRRule:(RecurrenceRule *)rrule;
 @end
 
 @interface Event(iCalendar)
